Adds check for neutron service venv
This checks all neutron services to ensure using the proper
virtual environment for the openstack release. Reports fail
on any neutron service not running via correct venv.

Connects rcbops/u-suk-dev#857

(cherry picked from commit fc40fa13146d4e685e97733bcd495dd38a61eac0)

--- a/rpcd/playbooks/rpc-post-upgrades.yml
+++ b/rpcd/playbooks/rpc-post-upgrades.yml
@@ -16,6 +16,7 @@
 - name: Run post-upgrade tasks
   hosts: galera_all:rabbitmq:utility:swift_proxy:elasticsearch_container:neutron_all
   user: root
+  hosts: galera_all:rabbitmq:utility:swift_proxy:elasticsearch_container:neutron_all
   any_errors_fatal: true
   roles:
     - rpc_post_upgrade
